[package]
name = "bytelines"
version = "2.4.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Read input lines as byte slices for high efficiency"
repository = "https://github.com/whitfin/bytelines"
keywords = ["lines", "bytes"]
categories = ["parsing", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
#hrtb-lending-iterator = "0.1.0"
hrtb-lending-iterator = { git = "https://github.com/vigna/hrtb-lending-iterator-rs"}
futures = "0.3"
tokio = { version = "1.14", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
