[package]
name = "bytelines"
version = "2.4.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Read input lines as byte slices for high efficiency"
repository = "https://github.com/whitfin/bytelines"
keywords = ["lines", "bytes"]
categories = ["parsing", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
futures-util = {version = "0.3", optional = true, default-features = false }
tokio = { version = "1.14", features = ["fs", "io-util"], optional = true}

[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }

[features]
default = []
tokio = ["dep:tokio", "futures-util"]
